[package]
name = "wiretap"
authors = [ "Kevin Conley <koins@duck.com>" ]
version = "0.3.2"
edition = "2021"
rust-version = "1.69"
license = "MIT"
description = "Basic packet capture library built on parallelism"
repository = "https://github.com/kmanc/wiretap"
keywords = [ "pcap", "networking", "packet", "sniffing", "capture" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pnet = {version = "0"}
rayon = {version = "1.7"}